--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  /* overflow: hidden; */
-  user-select: none;
-  
+  /* overflow: hidden; */  
+}
+
+
+::selection {
+  background-color: #252963;
+  color: #fff;
 }
 
 body {
