--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,3 +1,48 @@
+/* Top Banner */
+.top-banner {
+  width: 100%;
+  height: 35px;
+  max-width: 1440px;
+  margin: auto;
+  /* background-color: #480607; */
+  background-color: #ee8c26;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  padding: 0px 20px;
+}
+
+.top-banner-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+}
+
+.top-banner a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.phone,
+.email {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 10px;
+}
+
+.top-banner-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  font-size: 20px;
+}
+
 /* General Styles for Navbar */
 .navbar-section {
   width: 100%;
@@ -175,6 +220,11 @@
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
+
+  .top-banner {
+    display: none;
+  }
+
   .navbar-section {
     height: 60px;
     padding: 10px 10px;
